[BUG] Fix Api logout, refresh token, update swagger
